crates/outbox-publisher/tests/ui/06_derive_on_enum.stderr
error: `#[derive(DomainEvent)]` can only be applied to structs, not enums
 --> tests/ui/06_derive_on_enum.rs:6:5
  |
6 | pub enum UserEvent {
  |     ^^^^
